# ser-file

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/: artifacts.yml  xwin.yml
.github/actions/artifacts/: action.yml
.github/actions/ref_type/: action.yml  parse_ref.py
.github/actions/xwin/: action.yml
.github/workflows/: RELEASE.md  artifacts.json  artifacts.yml  ci.yml  publish-dry.yml  publish.yml  release.sh  test.yml
cli/: cli.rs
examples/: cli.rs
lib/: fixed_string.rs  format.rs  lib.rs  ser.rs  timestamp.rs
src/: fixed_string.rs  format.rs  frame.rs  lib.rs  ser.rs  timestamp.rs
