[package]
name = "ser-file"
version = "0.1.0"
edition = "2024"

[lib]
name = "ser_file"
path = "src/lib.rs"

[[example]]
name = "ser"
path = "examples/cli.rs"

[dependencies]
binrw = "0.15.1"
chrono = "0.4.44"
image = "0.25.9"

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
glob = "0.3.3"
