[package]
name = "ser-file"
version = "0.1.2-rc.2"
edition = "2024"
authors = ["themadcreator@github"]
description = "Read, write, export, create SER files"
repository = "https://github.com/themadcreator/ser-file"
license = "MIT"
keywords = ["astronomy", "photography"]
categories = []

[lib]
name = "ser_file"
path = "lib/lib.rs"

[[bin]]
name = "ser"
path = "cli/cli.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "glob"]

[dependencies]
binrw = "0.15.1"
chrono = "0.4.44"
getset = "0.1.6"
image = "0.25.9"
clap = { version = "4.5.60", features = ["derive"], optional = true }
glob = { version = "0.3.3", optional = true }
